kotlin/programming-kotlin_code/iteration/output/scope.output
scope.kts:3:9: error: unresolved reference: i
println(i)
        ^
